--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "bootstrap": "^4.1.3",
     "gh-pages": "^2.0.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
